# sudoku-checker

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: lib.rs
